-issue#2152: When editing a device, should show disable/enable option
-issue#2153: Utilities page issues the wrong hook for tabs
-issue#2163: LDAP functions are not consistent
-issue#2164: Login page does not remember selected realm
-issue#2171: datepicker and timepick translation not available
-issue: Unable to display user profile tabs

1.2.0 Beta 1
-security#1882: Bypass output validation in select cases
-issue#186: Cacti does not support jQueryUI 1.12.x
-issue#187: Remove the use of jQuery Migrate plugin
-issue#454: Cacti Re-Index does not resolve index changes properly during re-index 
-issue#983: Import Template Preview is misleading
-issue#1072: CVE-2009-4112 with regard to exploiting Data Input methods
-issue#1097: When copying template user, enable that user, also template users should be disabled by default
-issue#1174: Disable drag and drop when tree is not in edit mode
-issue#1200: Aggregate Graphs can not include some classes of COMMENT
-issue#1298: Prevent system running if system log is not writable
-issue#1350: When switching an Automation Tree Rule's leaf type, remove invalid Automation Rule Items
-issue#1383: CSRF Timeout does not obey session timeout
-issue#1408: Update SQL / Backtrace to use new clean_up_lines() function
-issue#1414: DSSTATS reports incorrectly that a data source does not exist
-issue#1420: Debian test suite reports issues 
-issue#1421: Fix issue when SQL had all bad modes, missing variable warning was generated
-issue#1426: Fix issue where remote poller was not using unique filenames when attempting to verify files
-issue#1437: Plugin install hover message sometimes shows line breaks rather than formatted text
-issue#1473: Recovery Date overwritten by subsequent checks
-issue#1494: Unable to Deep Link/Bookmark Trees
-issue#1454: When using oid_regexp_parse, filter indexes to those that match
-issue#1503: Undefined function clearstatscache in DSSTATS